SM-Dev/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hunting</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Camping</fullName>
                </value>
                <value>
                    <fullName>BBQ &amp; Backyard Cookouts</fullName>
                </value>
                <value>
                    <fullName>Rodeo</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Boating</fullName>
                </value>
                <value>
                    <fullName>Tailgating</fullName>
                </value>
                <value>
                    <fullName>Paddle Sports</fullName>
                </value>
                <value>
                    <fullName>Hiking &amp; Climbing</fullName>
                </value>
                <value>
                    <fullName>Biking</fullName>
                </value>
                <value>
                    <fullName>Team Sports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsFinalEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Datix Yeti-Unity Sprint #2.</description>
        <inlineHelpText>If the final automated-email has been sent.</inlineHelpText>
        <label>Is Final Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInitialEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sprint 2 by Datix.</description>
        <inlineHelpText>If the system&apos;s first automated-email has been sent.</inlineHelpText>
        <label>Is Initial Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPhoneTaskCompletedByUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Datix Yeti-Unity Sprint #2.</description>
        <inlineHelpText>If the assigned phone-call task has been completed by the case owner.</inlineHelpText>
        <label>Is Phone Task Completed By User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populated only if applicable when the customer contact&apos;s account does not exist in Salesforce/</inlineHelpText>
        <label>Lead Name</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_ID_Number__c</fullName>
        <label>License/ID Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Payment_Received_Date__c</fullName>
        <label>Logo Payment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logo_Payment_Received_Notes__c</fullName>
        <label>Logo Payment Received Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Logo_Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lowball_1_Verification__c</fullName>
        <label>Lowball 1 Verification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowball_2_Verification__c</fullName>
        <label>Lowball 2 Verification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lowball_3_Verification__c</fullName>
        <label>Lowball 3 Verification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_First_Name__c</fullName>
        <label>Manager First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Last_Name__c</fullName>
        <label>Manager Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Color__c</fullName>
        <label>Model/Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Roadie 20 White</fullName>
                </value>
                <value>
                    <fullName>Roadie 20 Tan</fullName>
                </value>
                <value>
                    <fullName>Roadie 20 Ice Blue</fullName>
                </value>
                <value>
                    <fullName>Tundra 35 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 35 Tan</fullName>
                </value>
                <value>
                    <fullName>Tundra 35 Ice Blue</fullName>
                </value>
                <value>
                    <fullName>Tundra 45 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 45 Tan</fullName>
                </value>
                <value>
                    <fullName>Tundra 45 Ice Blue</fullName>
                </value>
                <value>
                    <fullName>Tundra 50 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 50 Tan</fullName>
                </value>
                <value>
                    <fullName>Tundra 50 Ice Blue</fullName>
                </value>
                <value>
                    <fullName>Tundra 65 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 65 Tan</fullName>
                </value>
                <value>
                    <fullName>Tundra 65 Ice Blue</fullName>
                </value>
                <value>
                    <fullName>Tundra 75 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 75 Tan</fullName>
                </value>
                <value>
                    <fullName>Tundra 85 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 85 Tan</fullName>
                </value>
                <value>
                    <fullName>Tundra 105 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 105 Tan</fullName>
                </value>
                <value>
                    <fullName>Tundra 110 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 120 Tan</fullName>
                </value>
                <value>
                    <fullName>Tundra 125 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 155 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 155 Tan</fullName>
                </value>
                <value>
                    <fullName>Tundra 160 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 210 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 250 White</fullName>
                </value>
                <value>
                    <fullName>Tundra 420 White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Event__c</fullName>
        <label>Name of Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Return_Charged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Return Charged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Return_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Return Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Coolers__c</fullName>
        <label>Number of Coolers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20-30</fullName>
                </value>
                <value>
                    <fullName>31-50</fullName>
                </value>
                <value>
                    <fullName>50+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Points_Sold__c</fullName>
        <label>Number of Points Sold</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_SO__c</fullName>
        <description>Added for RMA Process</description>
        <label>Original SO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outfitter_Inquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outfitter Inquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Created_Date__c</fullName>
        <label>PO Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pack_ID__c</fullName>
        <description>Added for RMA Process</description>
        <label>Delivery Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Captured_Date__c</fullName>
        <label>Payment Captured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Place_of_Purchase__c</fullName>
        <label>Place of Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YETI.com</fullName>
                </value>
                <value>
                    <fullName>Pronghorn/eBay</fullName>
                </value>
                <value>
                    <fullName>Big Box</fullName>
                </value>
                <value>
                    <fullName>Local Dealer</fullName>
                </value>
                <value>
                    <fullName>Flagship</fullName>
                </value>
                <value>
                    <fullName>Unauthorized 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrePaid_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PrePaid Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_RMA_Case__c</fullName>
        <label>Previous RMA Case #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_RMA_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous RMA&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tundra</fullName>
                </value>
                <value>
                    <fullName>Roadie</fullName>
                </value>
                <value>
                    <fullName>Tank</fullName>
                </value>
                <value>
                    <fullName>Hopper</fullName>
                </value>
                <value>
                    <fullName>Drinkware</fullName>
                </value>
                <value>
                    <fullName>Panga</fullName>
                </value>
                <value>
                    <fullName>Loadout</fullName>
                </value>
                <value>
                    <fullName>Gear</fullName>
                </value>
                <value>
                    <fullName>Ice</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Chairs</fullName>
                </value>
                <value>
                    <fullName>Haul</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Picklist__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1/2 G</fullName>
                </value>
                <value>
                    <fullName>1 G</fullName>
                </value>
                <value>
                    <fullName>1 Gallon Jug</fullName>
                </value>
                <value>
                    <fullName>1 Pound</fullName>
                </value>
                <value>
                    <fullName>2 Pound</fullName>
                </value>
                <value>
                    <fullName>4 Pound</fullName>
                </value>
                <value>
                    <fullName>Backflip 24</fullName>
                </value>
                <value>
                    <fullName>Baskets</fullName>
                </value>
                <value>
                    <fullName>Bottle Lid</fullName>
                </value>
                <value>
                    <fullName>Bottle Opener</fullName>
                </value>
                <value>
                    <fullName>Camino 35</fullName>
                </value>
                <value>
                    <fullName>Can Insulators</fullName>
                </value>
                <value>
                    <fullName>Collegiate Cooler</fullName>
                </value>
                <value>
                    <fullName>Colster</fullName>
                </value>
                <value>
                    <fullName>Cushions</fullName>
                </value>
                <value>
                    <fullName>Decals</fullName>
                </value>
                <value>
                    <fullName>Flip</fullName>
                </value>
                <value>
                    <fullName>Flip 12</fullName>
                </value>
                <value>
                    <fullName>Flip 18</fullName>
                </value>
                <value>
                    <fullName>Flip 8</fullName>
                </value>
                <value>
                    <fullName>Half Gallon Jug</fullName>
                </value>
                <value>
                    <fullName>Hats</fullName>
                </value>
                <value>
                    <fullName>Hondo</fullName>
                </value>
                <value>
                    <fullName>Hopper 20</fullName>
                </value>
                <value>
                    <fullName>Hopper 30</fullName>
                </value>
                <value>
                    <fullName>Hopper 40</fullName>
                </value>
                <value>
                    <fullName>Hopper Two 20</fullName>
                </value>
                <value>
                    <fullName>Hopper Two 30</fullName>
                </value>
                <value>
                    <fullName>Hopper Two 40</fullName>
                </value>
                <value>
                    <fullName>Lid 10/20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <label>Production Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proof_Approval_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Approval Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_Received_Date__c</fullName>
        <label>Proof Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_Received_Notes__c</fullName>
        <label>Proof Received Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proof_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_and_PO_sent_to_MIGS__c</fullName>
        <label>Proof and PO sent to MIGS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Location__c</fullName>
        <label>Purchase Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_of_Lowballs__c</fullName>
        <label>Quantity of Lowballs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Received_Date__c</fullName>
        <label>Quote Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Received_Notes__c</fullName>
        <label>Quote Received Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMA_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RMA Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMA_Denied_Reason__c</fullName>
        <label>RMA Denied Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Warranty Issue</fullName>
                </value>
                <value>
                    <fullName>3rd Party Customization</fullName>
                </value>
                <value>
                    <fullName>Accidental Damage</fullName>
                </value>
                <value>
                    <fullName>Non-YETI/Counterfeit</fullName>
                </value>
                <value>
                    <fullName>Fraudulent Request</fullName>
                </value>
                <value>
                    <fullName>Legacy Product</fullName>
                </value>
                <value>
                    <fullName>Previous Non-return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RMA Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMA_Number__c</fullName>
        <description>Added for RMA Process</description>
        <label>RMA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Order_Number__c</fullName>
        <description>Added for RMA Process</description>
        <label>RMA Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Process__c</fullName>
        <label>RMA Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Process</fullName>
                </value>
                <value>
                    <fullName>Old Process No Answer</fullName>
                </value>
                <value>
                    <fullName>Old Process Only*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Resolution__c</fullName>
        <label>RMA Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Big Box Dealer Return</fullName>
                </value>
                <value>
                    <fullName>Bowed Lid</fullName>
                </value>
                <value>
                    <fullName>Cancelled Order</fullName>
                </value>
                <value>
                    <fullName>Component Install on Cooler</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Damaged in Shipping</fullName>
                </value>
                <value>
                    <fullName>Defective-Hopper</fullName>
                </value>
                <value>
                    <fullName>Defective-Lock</fullName>
                </value>
                <value>
                    <fullName>Defective-Rambler</fullName>
                </value>
                <value>
                    <fullName>Defective-YETI Ice</fullName>
                </value>
                <value>
                    <fullName>Delam</fullName>
                </value>
                <value>
                    <fullName>Ice Retention</fullName>
                </value>
                <value>
                    <fullName>Lay-By Cancellation</fullName>
                </value>
                <value>
                    <fullName>Leaking</fullName>
                </value>
                <value>
                    <fullName>Logo Error</fullName>
                </value>
                <value>
                    <fullName>MISC Defect</fullName>
                </value>
                <value>
                    <fullName>Not Sealing</fullName>
                </value>
                <value>
                    <fullName>Office Error-Wrong Item</fullName>
                </value>
                <value>
                    <fullName>Office Error-Wrong Qty</fullName>
                </value>
                <value>
                    <fullName>Office Error-Wrong Ship Date</fullName>
                </value>
                <value>
                    <fullName>Office Error-Wrong/No Ship To</fullName>
                </value>
                <value>
                    <fullName>Outside Rep-Never Ordered</fullName>
                </value>
                <value>
                    <fullName>Outside Rep-Wrong Item</fullName>
                </value>
                <value>
                    <fullName>Outside Rep-WRong Qty</fullName>
                </value>
                <value>
                    <fullName>Porosity</fullName>
                </value>
                <value>
                    <fullName>Product Sample</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Returned Shipment Refused</fullName>
                </value>
                <value>
                    <fullName>Return-OHL Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Status__c</fullName>
        <label>RMA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Attempt</fullName>
                </value>
                <value>
                    <fullName>2nd Attempt</fullName>
                </value>
                <value>
                    <fullName>3rd Attempt/Call</fullName>
                </value>
                <value>
                    <fullName>In Transit</fullName>
                </value>
                <value>
                    <fullName>Charged</fullName>
                </value>
                <value>
                    <fullName>Needing Chase Profile ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMA_Type__c</fullName>
        <label>RMA Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Old Process</fullName>
                </value>
                <value>
                    <fullName>CC Declined</fullName>
                </value>
                <value>
                    <fullName>Write Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonWeb__c</fullName>
        <label>Reason Web</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Received_Logo_Date__c</fullName>
        <label>Received Logo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Received_Resell_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Resell Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requsting_Item__c</fullName>
        <label>Requsting Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Sticker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Picklist__c</fullName>
        <label>Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Called Customer</fullName>
                </value>
                <value>
                    <fullName>Create Order</fullName>
                </value>
                <value>
                    <fullName>Create RMA</fullName>
                </value>
                <value>
                    <fullName>Emailed Customer</fullName>
                </value>
                <value>
                    <fullName>Transferred to Other Department</fullName>
                </value>
                <value>
                    <fullName>Transfered to Outfitter</fullName>
                </value>
                <value>
                    <fullName>No Response Necessary</fullName>
                </value>
                <value>
                    <fullName>SPAM</fullName>
                </value>
                <value>
                    <fullName>First Call Resolution</fullName>
                </value>
                <value>
                    <fullName>Sent to Outside Rep</fullName>
                </value>
                <value>
                    <fullName>Updated Account</fullName>
                </value>
                <value>
                    <fullName>Registered Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Respond_Time__c</fullName>
        <formula>IF( IsClosed, /*checking case is closed or not */
IF( 
ISBLANK( FirstRespond__c),

/* if case is closed when first FirstRespond__c  field is null  */ 

FLOOR( (ClosedDate - CreatedDate) * 24 )+ 
MOD( (ClosedDate - CreatedDate) * 24 * 60, 60 )/100, 

/* if case is Not closed when first FirstRespond__c  field is null  */ 

FLOOR( (FirstRespond__c - CreatedDate) * 24 )+ 
MOD( (FirstRespond__c - CreatedDate) * 24 * 60, 60 )/100 
), 


IF( 
NOT(ISBLANK( FirstRespond__c)), 
/* if case is not closed And first FirstRespond__c  field is Not null  */

FLOOR( (FirstRespond__c - CreatedDate) * 24 )+ 
MOD( (FirstRespond__c - CreatedDate) * 24 * 60, 60 )/100, 

0) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Respond Time In Hours/Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Sub_Reason__c</fullName>
        <label>Root Cause Sub Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Root_Cause__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Entry Error</fullName>
                </value>
                <value>
                    <fullName>Associate Error</fullName>
                </value>
                <value>
                    <fullName>System Error</fullName>
                </value>
                <value>
                    <fullName>Shortage</fullName>
                </value>
                <value>
                    <fullName>Missing Cartons</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Delivered to the wrong address</fullName>
                </value>
                <value>
                    <fullName>Potential Theft</fullName>
                </value>
                <value>
                    <fullName>Lost in Carrier System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YETI Internal Issue</fullName>
                </value>
                <value>
                    <fullName>OHL Issue</fullName>
                </value>
                <value>
                    <fullName>Carrier Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Safety_Concern_Reason__c</fullName>
        <label>Safety Concern Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Injury</fullName>
                </value>
                <value>
                    <fullName>Property Damage</fullName>
                </value>
                <value>
                    <fullName>California Prop 65</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>BPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>